--- a/home.css
+++ b/home.css
@@ -1,10 +1,13 @@
 body {
+  padding-top: 56px;
   display: grid;
   grid-template-columns: 1fr;
   background-image: url('background.jpg');
   background-attachment: fixed;
   background-size: cover;
   margin: 0;
+ max-height: 100vh;
+ overflow: hidden;
 }
 
 .header {
@@ -23,7 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20%;
+  margin-top: 10%;
   margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
